--- a/libs/cli/Cargo.toml
+++ b/libs/cli/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cli"
 version = "0.1.0"
 edition = "2021"
+authors = ["kaisic1224"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -9,3 +10,4 @@ edition = "2021"
 clap = { version = "4.0", features = ["derive"] }
 anyhow = "1.0"
 termcolor = "1.2.0"
+youtube_dl = "0.8.1"
